--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ h1 {
 }
 body {
 	background-color: #00FFFF;
-	font-family: ;
+	font-family: Raleway, Helvetica, sans-serif;
 	text-align: center;
 
 }
@@ -83,6 +83,13 @@ body {
 .input-field {
 	width: 100%;
 	display: inline-block;
+}
+#submit {
+	background-color: lightskyblue;
+	border: blue;
+	margin-top: 10px;
+	padding: 10px 10px 10px 10px;
+	font-size: 15px;
 }
 
 
